<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1.5" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txt_msg1"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/edt_msg1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.83"
            android:hint="@string/edt_hint_msg"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_size_16" />

        <Button
            android:id="@+id/btn_submit1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0.32"
            android:background="@color/green_normal"
            android:gravity="center"
            android:text="@string/btn_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1.5" >

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txt_msg2"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/edt_msg2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.83"
            android:hint="@string/edt_hint_msg"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_size_16" />

        <Button
            android:id="@+id/btn_submit2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0.32"
            android:background="@color/green_normal"
            android:gravity="center"
            android:text="@string/btn_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

    <!-- Dynamic VERTICAL stretch frame -->

    <FrameLayout
        android:id="@+id/fl2"
        android:layout_width="fill_parent"
        android:layout_height="20dp" >
    </FrameLayout>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_stored_msg1"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_14" />

    <TextView
        android:id="@+id/tv_meta_msg1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_shade"
        android:text="@string/txt_meta_msg"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_stored_msg2"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_14" />

    <TextView
        android:id="@+id/tv_meta_msg2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_shade"
        android:text="@string/txt_meta_msg"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16" />

</LinearLayout>